<resources>
    <string name="app_name">Такси-СОФ</string>
    <string name="terms_of_work">
        \t\t\tУсловия работы с Агрегаторам "Такси-СОФ" \n
\t\t\t=====================================\n
\t1) Сумма минимального заказа 200 руб.\n
1.1) Цена за 1 км /27 руб. и рассчитывается исходя из расчетов показаний Навигатора от точки А до точки Б и не может быть пересчитана если вы едете, маршрутом отличным от установленного Навигатором. При этом, выбор маршрута, если есть альтернативный предлагаемому, только за Водителем.\n
\n
\n
1) Агрегатор Такси-СОФ, предоставляется на условиях суточной оплаты из расчета 30 руб за 12-ти часовой рабочий день. Соответственно 60 руб в сутки.\n
2) Денежные средства для оплаты работы Агрегатора Такси-СОФ списываются равными долями ( 60 руб/сутки.)  с вашего Баланса, который вы можете видеть в левом углу приложения.\n
3) Баланс пополняется по средствам выполнения Безналичных заказов. Все заказы, поступающие с оплатой с оплатой наличными, водитель получаете в 100 % размере. Для корректной работы приложения и своевременной оплаты, мы предусмотрели; В сутки вам будет поступать не больше 2-х заказов с Оплатой картой. Если количество выполненных заказов ровна сумме месячной Абонентской платы из расчета 60 руб/ сутки. Соответственно 1800 руб / Месяц, в этом случае, заказы с оплатой Банковской картой или любым иным способом, кроме Наличных, приходить не будут.\n
4) Прием заказов с оплатой Банковской картой, при Балансе 1800 руб, остается на усмотрение водителя. При условии предварительной договоренности с пассажиром. В этом случае, водителю следует, иметь свою Банковскую карту и возможность принятия оплаты от клиента на неё.\n
5) Не допускайте отрицательного Баланса(Менее 60 руб), в этом случае, Ваш Аккаунт будет заблокирован, до поступления на него денежных средств, с учетом пропущенных смен. Если Ваш Баланс менее 60-ти руб и вы пропустили 3 дня, то следует пополнить Ваш Баланс 200 руб.\n
6) Агрегатор "Такси-СОФ" не является Таксомоторным парком, а предоставляет только возможность связи между Машиной (Водителем.) и Пассажиром.\n
\n
Если у вас возникли вопросы, просьбы или проблемы с работой Агрегатора «Такси-СОФ» рады будем вам помочь (и)или ответить на Ваши вопросы.\n
Контакты для связи: 10101d@mail.ru\n
    </string>
    <string name="new_order">Новый заказ</string>
    <string name="orders_history">История заказов</string>
    <string name="day">День</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="all_time">За все время</string>
    <string name="total_price_for_chosen_time">Сумма за выбранное время</string>
    <string name="currency">руб.</string>
    <string name="start_work">Начать смену</string>
    <string name="finish_work">Закончить смену</string>


    <string name="cost"><font color='#000'>Стоимость поездки:</font> <b><font color='#ca332a'>19 руб.</font></b><font color='#000'> за 1 км</font></string>
    <string name="without_extra_options">Без особых пожелниий</string>
    <string name="cash">Наличный расчёт</string>
    <string name="credit_card">Безналичный расчёт</string>
    <string name="choose_from_hint">Выберите пункт отправления</string>
    <string name="choose_to_hint">Выберите пункт назначения</string>
    <string name="sign_in">Войти</string>
    <string name="sign_out">Выход</string>
    <string name="sign_up">Зарегистрироваться</string>

    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="phone">Телефон</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>

    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="arriving_time">Время подачи</string>
    <string name="now">Сейчас</string>
    <string name="ok">OK</string>
</resources>
